# callsign

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
commands/: callsign.md
docs/: hermes.md
docs/plans/: 2026-06-16-v0.3-REWORK.md  2026-06-16-v0.3-bidirectional-middleman.md
plugin/: manifest.json
plugin/skills/callsign/: SKILL.md
scripts/: callsign-router-daemon  callsign_names.txt  claude_resume.zsh  imsg-callsign  install_launchd.sh  project_callsign.py
skills/callsign/: SKILL.md
src/callsign/: __init__.py  alerts.py  banner.py  chunking.py  cli.py  config.py  dispatcher.py  hermes.py  inbox.py  locks.py  names.py  paths.py  persona.py  processed_db.py  registry.py  router.py
src/callsign/hooks/: session_end.sh  session_start.py  session_start.sh
tests/: test_smoke.py
