[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "callsign"
version = "0.2.1"
description = "Unique per-session agent names + iMessage routing for Claude Code and Hermes."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "heyfinal" }]
keywords = [
    "claude-code", "claude", "anthropic", "hermes", "imessage",
    "agent", "multi-agent", "ai-agents", "llm", "session-management",
    "mcp", "macos", "routing", "plugin", "skill",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
callsign = "callsign.cli:main"

[project.urls]
Homepage = "https://github.com/heyfinal/callsign"
Repository = "https://github.com/heyfinal/callsign"
Issues = "https://github.com/heyfinal/callsign/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/callsign"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
